objects/ResourceAbsence.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FSL__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Duration_In_Minutes__c</fullName>
        <formula>IF (ISBLANK(Start), 0, (End - Start)*24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__EstTravelTimeFrom__c</fullName>
        <label>Estimated Travel Time From</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__EstTravelTime__c</fullName>
        <label>Estimated Travel Time</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__EstimatedTravelDistanceFrom__c</fullName>
        <label>Estimated Travel Distance From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__EstimatedTravelDistanceTo__c</fullName>
        <label>Estimated Travel Distance To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Estimated_Travel_Time_From_Source__c</fullName>
        <label>Estimated Travel Time From Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Aerial</fullName>
                </value>
                <value>
                    <fullName>SLR</fullName>
                </value>
                <value>
                    <fullName>Predictive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Estimated_Travel_Time_To_Source__c</fullName>
        <label>Estimated Travel Time To Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Aerial</fullName>
                </value>
                <value>
                    <fullName>SLR</fullName>
                </value>
                <value>
                    <fullName>Predictive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__GanttLabel__c</fullName>
        <label>Gantt Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Gantt_Color__c</fullName>
        <label>Gantt Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__InternalSLRGeolocation__c</fullName>
        <label>Internal SLR Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>FSL__Last_Updated_Epoch__c</fullName>
        <label>Last Updated Epoch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Scheduling_Policy_Used__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduling Policy Used</label>
        <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
        <relationshipLabel>Resource Absences</relationshipLabel>
        <relationshipName>Resource_Absences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_Service_WEM_Assigned_to_me__c</fullName>
        <description>*What*: Used to indicate if absence is assigned to user.  *Who*: Gregory Johnson. *When*: June 2022</description>
        <formula>Resource.RelatedRecordId = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned to me?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Service_WEM_In_the_Past__c</fullName>
        <description>*What*: Used to indicate if absence is in the past.  *Who*: Gregory Johnson. *When*: June 2022</description>
        <formula>End &lt; Now()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In the past?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Tool_FSLDemoTools_Master_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FSLDemoTools Master Data</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_ResourceAbsences</fullName>
        <columns>Name</columns>
        <columns>Resource</columns>
        <columns>Type</columns>
        <columns>Start</columns>
        <columns>End</columns>
        <filterScope>Everything</filterScope>
        <label>All Resource Absences</label>
    </listViews>
    <listViews>
        <fullName>All_ResourceAbsences</fullName>
        <filterScope>Everything</filterScope>
        <label>All Resource Absences</label>
    </listViews>
    <listViews>
        <fullName>My_Resource_Absences</fullName>
        <columns>Name</columns>
        <columns>Type</columns>
        <columns>Start</columns>
        <columns>End</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Resource</field>
            <operation>contains</operation>
            <value>Tim Service</value>
        </filters>
        <label>My Resource Absences</label>
    </listViews>
    <listViews>
        <fullName>SDO_WEM_My_Upcoming_Resource_Absences</fullName>
        <columns>Type</columns>
        <columns>Description</columns>
        <columns>Start</columns>
        <columns>End</columns>
        <columns>FSL__Approved__c</columns>
        <columns>Name</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SDO_Service_WEM_Assigned_to_me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>SDO_Service_WEM_In_the_Past__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Upcoming Resource Absences</label>
    </listViews>
    <listViews>
        <fullName>Workforce_Engagement_Resource_Absences</fullName>
        <columns>Resource</columns>
        <columns>Type</columns>
        <columns>Start</columns>
        <columns>End</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Resource</field>
            <operation>contains</operation>
            <value>Service</value>
        </filters>
        <label>Workforce Engagement Resource Absences</label>
    </listViews>
    <recordTypes>
        <fullName>FSL__Break</fullName>
        <active>true</active>
        <label>Break</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Non_Availability</fullName>
        <active>true</active>
        <label>Non Availability</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FSLDemoTools_Master_Data</fullName>
        <active>false</active>
        <errorConditionFormula>SDO_Tool_FSLDemoTools_Master_Data__c</errorConditionFormula>
        <errorMessage>Can&apos;t edit FSLDemoTools Master Data</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Absence_Color_HEX_Format</fullName>
        <active>true</active>
        <errorConditionFormula>(!ISBLANK(FSL__Gantt_Color__c)) &amp;&amp; (NOT(REGEX(FSL__Gantt_Color__c, &quot;#[a-fA-F0-9]{6}&quot;)))</errorConditionFormula>
        <errorDisplayField>FSL__Gantt_Color__c</errorDisplayField>
        <errorMessage>Gantt color must be in hexadecimal format: (for example: #ffffff)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__startShouldPrecedeEnd</fullName>
        <active>true</active>
        <errorConditionFormula>End &lt;=  Start</errorConditionFormula>
        <errorDisplayField>Start</errorDisplayField>
        <errorMessage>The Start Time must be earlier than the End Time.</errorMessage>
    </validationRules>
</CustomObject>